@@ -1117,12 +1117,22 @@ command whose response triggered the error."
   (nntp-with-open-group
       nil server
     (with-current-buffer nntp-server-buffer
-      (prog1
-	  (nntp-send-command
-	   "^\\.\r?\n" "NEWGROUPS"
-	   (format-time-string "%y%m%d %H%M%S" (date-to-time date) t)
-	   "GMT")
-	(nntp-decode-text)))))
+      (let* ((time (date-to-time date))
+	     (ls (- (cadr time) (nth 8 (decode-time time)))))
+	(cond ((< ls 0)
+	       (setcar time (1- (car time)))
+	       (setcar (cdr time) (+ ls 65536)))
+	      ((>= ls 65536)
+	       (setcar time (1+ (car time)))
+	       (setcar (cdr time) (- ls 65536)))
+	      (t
+	       (setcar (cdr time) ls)))
+	(prog1
+	    (nntp-send-command
+	     "^\\.\r?\n" "NEWGROUPS"
+	     (format-time-string "%y%m%d %H%M%S" time)
+	     "GMT")
+	  (nntp-decode-text))))))
 
 (deffoo nntp-request-post (&optional server)
   (nntp-with-open-group
